force-app/main/default/objects/Member_Get_Member__c/Member_Get_Member__c.object-meta.xml
<CustomObject>
    <description>Referral scheme to give existing members a gift when recommended friend joins</description>
    <label>Recommend A Friend</label>
    <nameField>
        <displayFormat>RAF-{00000000}</displayFormat>
        <label>Member Get Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommend A Friend</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>