force-app/main/default/objects/Member_Get_Member__c/fields/AS400_Introduction_Date__c.field-meta.xml
<CustomField>
    <fullName>AS400_Introduction_Date__c</fullName>
    <label>AS/400 Introduction Date</label>
    <type>DateTime</type>
</CustomField>