force-app/main/default/objects/Member_Get_Member__c/fields/Existing_Member__c.field-meta.xml
<CustomField>
    <fullName>Existing_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filterItems>
        <filterItems>
            <field>Contact.Membership_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Ex-Member,Lapsed,Refer to Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Member_Get_Member</relationshipName>
    <type>Lookup</type>
</CustomField>