force-app/main/default/objects/Member_Get_Member__c/fields/Existing_Membership_No__c.field-meta.xml
<CustomField>
    <fullName>Existing_Membership_No__c</fullName>
    <formula>Existing_Member__r.Account.Hybrid_Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Membership No.</label>
    <type>Text</type>
</CustomField>