force-app/main/default/objects/Member_Get_Member__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <description>The picklist field values should only represent the current gifts that are available for selection. However, the field will retain previous gift values that have been updated via data import, or from picklist values that are no longer available for selection.</description>
    <label>Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club Site Voucher</fullName>
            </value>
            <value>
                <fullName>Foldable Camping Chair</fullName>
                <label>RAF - Camping Chair</label>
            </value>
            <value>
                <fullName>Golf Umbrella</fullName>
                <label>RAF - Umbrella</label>
            </value>
            <value>
                <fullName>Insulated Picnic Bag</fullName>
                <label>RAF - Cooler Bags</label>
            </value>
            <value>
                <fullName>1 - Small Fleece</fullName>
                <isActive>false</isActive>
                <label>1 - Small Fleece</label>
            </value>
            <value>
                <fullName>2 - Medium Fleece</fullName>
                <isActive>false</isActive>
                <label>2 - Medium Fleece</label>
            </value>
            <value>
                <fullName>3 - Large Fleece</fullName>
                <isActive>false</isActive>
                <label>3 - Large Fleece</label>
            </value>
            <value>
                <fullName>4 - X Large Fleece</fullName>
                <isActive>false</isActive>
                <label>4 - X Large Fleece</label>
            </value>
            <value>
                <fullName>5 - XX Large Fleece</fullName>
                <isActive>false</isActive>
                <label>5 - XX Large Fleece</label>
            </value>
            <value>
                <fullName>6 - XXX Large Fleece</fullName>
                <isActive>false</isActive>
                <label>6 - XXX Large Fleece</label>
            </value>
            <value>
                <fullName>Adventure Bottle</fullName>
                <isActive>false</isActive>
                <label>Adventure Bottle</label>
            </value>
            <value>
                <fullName>Badge</fullName>
                <isActive>false</isActive>
                <label>Badge</label>
            </value>
            <value>
                <fullName>CCC1-13324-Camper Hamper (Caravan)</fullName>
                <isActive>false</isActive>
                <label>Camper Hamper (Caravan)</label>
            </value>
            <value>
                <fullName>CCC1-13325-Camper Hamper (Motorhome)</fullName>
                <isActive>false</isActive>
                <label>Camper Hamper (Motorhome)</label>
            </value>
            <value>
                <fullName>CCC1-13326-Camper Hamper (Tent)</fullName>
                <isActive>false</isActive>
                <label>Camper Hamper (Tent)</label>
            </value>
            <value>
                <fullName>Camping in the Forest Voucher</fullName>
                <isActive>false</isActive>
                <label>Camping in the Forest Voucher</label>
            </value>
            <value>
                <fullName>Club Care Key Protection Policy</fullName>
                <isActive>false</isActive>
                <label>Club Care Key Protection Policy</label>
            </value>
            <value>
                <fullName>Coin</fullName>
                <isActive>false</isActive>
                <label>Coin</label>
            </value>
            <value>
                <fullName>European Drivers&apos; Handbook</fullName>
                <isActive>false</isActive>
                <label>European Drivers&apos; Handbook</label>
            </value>
            <value>
                <fullName>F - CITF</fullName>
                <isActive>false</isActive>
                <label>F - CITF</label>
            </value>
            <value>
                <fullName>F - CITF Voucher</fullName>
                <isActive>false</isActive>
                <label>F - CITF Voucher</label>
            </value>
            <value>
                <fullName>Five Pound Club Site Voucher</fullName>
                <isActive>false</isActive>
                <label>Five Pound Club Site Voucher</label>
            </value>
            <value>
                <fullName>Games Cards Club Sites</fullName>
                <isActive>false</isActive>
                <label>Games Cards Club Sites</label>
            </value>
            <value>
                <fullName>Gelert Camping Essentials Bottle</fullName>
                <isActive>false</isActive>
                <label>Gelert Camping Essentials Bottle</label>
            </value>
            <value>
                <fullName>Indy</fullName>
                <isActive>false</isActive>
                <label>Indy</label>
            </value>
            <value>
                <fullName>Lantern</fullName>
                <isActive>false</isActive>
                <label>Lantern</label>
            </value>
            <value>
                <fullName>Large Fleece</fullName>
                <isActive>false</isActive>
                <label>Large Fleece</label>
            </value>
            <value>
                <fullName>Medium Fleece</fullName>
                <isActive>false</isActive>
                <label>Medium Fleece</label>
            </value>
            <value>
                <fullName>Phillips Club Atlas</fullName>
                <isActive>false</isActive>
                <label>Phillips Club Atlas</label>
            </value>
            <value>
                <fullName>Pitch Up, Eat Local Book</fullName>
                <isActive>false</isActive>
                <label>Pitch Up, Eat Local Book</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>