force-app/main/default/objects/Member_Get_Member__c/fields/Introduced_Membership__c.field-meta.xml
<CustomField>
    <fullName>Introduced_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Introduced Membership</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Member_Get_Member_del</relationshipName>
    <type>Lookup</type>
</CustomField>