force-app/main/default/objects/Member_Get_Member__c/fields/Introduced_Membership_No__c.field-meta.xml
<CustomField>
    <fullName>Introduced_Membership_No__c</fullName>
    <formula>Introduced_Membership__r.Hybrid_Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Introduced Membership No.</label>
    <type>Text</type>
</CustomField>