force-app/main/default/objects/Member_Get_Member__c/fields/Introduction_Date__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Date__c</fullName>
    <formula>IF(ISBLANK( AS400_Introduction_Date__c ), CreatedDate ,  AS400_Introduction_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Introduction Date</label>
    <type>Date</type>
</CustomField>