force-app/main/default/objects/Member_Get_Member__c/fields/Website_Gift__c.field-meta.xml
<CustomField>
    <fullName>Website_Gift__c</fullName>
    <label>Website_Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club Site Voucher</fullName>
            </value>
            <value>
                <fullName>Foldable Camping Chair</fullName>
                <label>RAF -  Camping Chair</label>
            </value>
            <value>
                <fullName>Golf Umbrella</fullName>
                <label>RAF - Umbrella</label>
            </value>
            <value>
                <fullName>Insulated Picnic Bag</fullName>
                <label>RAF - Cooler Bag</label>
            </value>
            <value>
                <fullName>1 - Small Fleece</fullName>
                <isActive>false</isActive>
                <label>1 - Small Fleece</label>
            </value>
            <value>
                <fullName>2 - Medium Fleece</fullName>
                <isActive>false</isActive>
                <label>2 - Medium Fleece</label>
            </value>
            <value>
                <fullName>3 - Large Fleece</fullName>
                <isActive>false</isActive>
                <label>3 - Large Fleece</label>
            </value>
            <value>
                <fullName>4 - X Large Fleece</fullName>
                <isActive>false</isActive>
                <label>4 - X Large Fleece</label>
            </value>
            <value>
                <fullName>5 - XX Large Fleece</fullName>
                <isActive>false</isActive>
                <label>5 - XX Large Fleece</label>
            </value>
            <value>
                <fullName>6 - XXX Large Fleece</fullName>
                <isActive>false</isActive>
                <label>6 - XXX Large Fleece</label>
            </value>
            <value>
                <fullName>CCC1-13324-Camper Hamper (Caravan)</fullName>
                <isActive>false</isActive>
                <label>Camper Hamper (Caravan)</label>
            </value>
            <value>
                <fullName>CCC1-13325-Camper Hamper (Motorhome)</fullName>
                <isActive>false</isActive>
                <label>Camper Hamper (Motorhome)</label>
            </value>
            <value>
                <fullName>CCC1-13326-Camper Hamper (Tent)</fullName>
                <isActive>false</isActive>
                <label>Camper Hamper (Tent)</label>
            </value>
            <value>
                <fullName>Camping in the Forest Voucher</fullName>
                <isActive>false</isActive>
                <label>Camping in the Forest Voucher</label>
            </value>
            <value>
                <fullName>Large Fleece</fullName>
                <isActive>false</isActive>
                <label>Large Fleece</label>
            </value>
            <value>
                <fullName>Medium Fleece</fullName>
                <isActive>false</isActive>
                <label>Medium Fleece</label>
            </value>
            <value>
                <fullName>Small Fleece</fullName>
                <isActive>false</isActive>
                <label>Small Fleece</label>
            </value>
            <value>
                <fullName>X Large Fleece</fullName>
                <isActive>false</isActive>
                <label>X Large Fleece</label>
            </value>
            <value>
                <fullName>XX Large Fleece</fullName>
                <isActive>false</isActive>
                <label>XX Large Fleece</label>
            </value>
            <value>
                <fullName>XXX Large Fleece</fullName>
                <isActive>false</isActive>
                <label>XXX Large Fleece</label>
            </value>
            <value>
                <fullName>£10 Decathlon Voucher - Youth members only</fullName>
                <isActive>false</isActive>
                <label>£10 Decathlon Voucher - Youth members only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>