force-app/main/default/objects/Member_Get_Member__c/listViews/ThisMonth_MGMs.listView-meta.xml
<ListView>
    <fullName>ThisMonth_MGMs</fullName>
    <columns>Introduced_Membership__c</columns>
    <columns>Introduced_Membership_No__c</columns>
    <columns>Existing_Member__c</columns>
    <columns>Existing_Membership_No__c</columns>
    <columns>Gift__c</columns>
    <columns>Introduction_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>New MGMs This Month</label>
</ListView>